src/test/ui/issues/issue-22289.stderr
error[E0605]: non-primitive cast: `i32` as `&(dyn std::any::Any + 'static)`
  --> $DIR/issue-22289.rs:2:5
   |
LL |     0 as &dyn std::any::Any;
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: an `as` expression can only be used to convert between primitive types. Consider using the `From` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0605`.
